--- a/analysis/analysis.ipynb
+++ b/analysis/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "2d4a2767",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "00b41147",
    "metadata": {},
    "outputs": [
@@ -33,8 +33,8 @@
        " '__package__',\n",
        " '__spec__',\n",
        " 'brpylib',\n",
-       " 'data_patextract_from_path',\n",
        " 'extract',\n",
+       " 'extract_from_path',\n",
        " 'glob',\n",
        " 'np',\n",
        " 'os',\n",
@@ -43,7 +43,7 @@
        " 'wavfile']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "c1e03483",
    "metadata": {},
    "outputs": [
@@ -67,7 +67,7 @@
     }
    ],
    "source": [
-    "data_path = \"C:/Users/ingri/OneDrive/Documentos/IMIM/RJH006 - Copia/RJH006_subj_obj_1/RJH006_eze_miniscr1\"\n",
+    "data_path = '/mnt/f/eze/RJH006/RJH006_subject_object_1/RJH006_eze_miniscr1/RJH006_eze_miniscr1/sub_obj'\n",
     "audio_channel = 257\n",
     "list_channels = list(range(33, 49))\n",
     "channel_ids = list_channels + [audio_channel]\n",
@@ -77,41 +77,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "031484e8",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "RJH006_eze_miniscr1\\20250803-160512-001.ns5 opened\n",
-      "\n",
-      "RJH006_eze_miniscr1\\20250803-160512-001.ns5 closed\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(array([14619.022     , 14619.02203333, 14619.02206667, ...,\n",
-       "        14794.3729    , 14794.37293333, 14794.37296667], shape=(5260530,)),\n",
-       " memmap([6435, 6429, 6438, ..., 6434, 6437, 6435],\n",
-       "        shape=(5260530,), dtype=int16),\n",
-       " <module 'scipy.io.wavfile' from 'c:\\\\Users\\\\ingri\\\\anaconda3\\\\envs\\\\daily\\\\lib\\\\site-packages\\\\scipy\\\\io\\\\wavfile.py'>)"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ea.extract_from_path(data_path, audio_channel, channel_ids)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
    "id": "cddc91d6",
    "metadata": {},
    "outputs": [
@@ -120,31 +85,37 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "RJH006_eze_miniscr1\\20250803-160512-001.ns5 opened\n",
+      "20250803-160512-002.ns5 opened\n",
       "\n",
-      "RJH006_eze_miniscr1\\20250803-160512-001.ns5 closed\n"
+      "20250803-160512-002.ns5 closed\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(array([14619.022     , 14619.02203333, 14619.02206667, ...,\n",
-       "        14794.3729    , 14794.37293333, 14794.37296667], shape=(5260530,)),\n",
-       " memmap([6435, 6429, 6438, ..., 6434, 6437, 6435],\n",
-       "        shape=(5260530,), dtype=int16))"
+       "(array([15493.221     , 15493.22103333, 15493.22106667, ...,\n",
+       "        16625.7949    , 16625.79493333, 16625.79496667]),\n",
+       " memmap([6773, 6795, 6787, ..., 6326, 6299, 6283], dtype=int16))"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "destination_path = \"C:/Users/ingri/OneDrive/Documentos/IMIM/RJH006 - Copia/RJH006_subj_obj_1/RJH006_eze_miniscr1/audio\"\n",
     "filename = \"audio_extracted.wav\"\n",
-    "destination_path = os.path.join(destination_path, filename)\n",
+    "destination_path = os.path.join(data_path, filename)\n",
     "ea.extract(data_path, destination_path, audio_channel, channel_ids)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22619ef5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -163,7 +134,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.18"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
