--- a/analysis/translating_test.ipynb
+++ b/analysis/translating_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "4b9dbaff",
    "metadata": {},
    "outputs": [
@@ -10,19 +10,209 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Segmento 1: 开始了。首先我是不会说名字啊！ -> here we go. First of all, I can’t say the name!\n",
-      "✅ Segmento 2: 嗯。 -> Um.\n",
-      "✅ Segmento 3: 朱茵、焦恩俊、周星驰、金映娟、张怡宁、七十。 -> Zhu Yin, Jiao Enjun, Stephen Chow, Jin Yingjuan, Zhang Yining, Seventy.\n",
-      "✅ Segmento 4: 啊，六七六四六三，朱茵、焦恩俊、金映娟、周星驰、张怡宁。 -> Ah, six seven six four six three, Zhu Yin, Jiao Enjun, Jin Yingjuan, Stephen Chow, Zhang Yining.\n",
-      "✅ Segmento 5: 好，我们下一个计算。接下来是个句子，朱茵教周星驰跳舞，八十二。 -> Okay, let's do the next calculation. Next is a sentence, Zhu Yin taught Zhou Xingchi to dance, eighty-two.\n",
-      "✅ Segmento 6: 啊，七十九、七十六，再然后七十三，朱茵教周星驰跳舞。 -> Ah, seventy-nine, seventy-six, and then seventy-three, Zhu Yin taught Stephen Chow how to dance.\n",
-      "✅ Segmento 7: 好的，接下来金映娟告诉焦恩俊了一个可怕的秘密，八十二。 -> Okay, next Jin Yingjuan told Jiao Enjun a terrible secret, eighty-two.\n",
-      "✅ Segmento 8: 嗯，七九七六七三，金映娟告诉了焦恩俊一个可怕的秘密。 -> Well, 797673, Jin Yingjuan told Jiao Enjun a terrible secret.\n",
-      "✅ Segmento 9: 好，继续。张怡宁给朱茵泡茶，二十四。 -> OK, continue. Zhang Yining makes tea for Zhu Yin, twenty-four.\n",
-      "✅ Segmento 10: 啊，二一十八、十五，张怡宁给朱茵泡茶。 -> Ah, 218, 15, Zhang Yining made tea for Zhu Yin.\n",
+      "✅ Segmento 1: 开始了 -> here we go\n",
+      "⚠️ Erro ao traduzir segmento 1: 'words'\n",
+      "✅ Segmento 2: 首先我是不会说名字啊 -> First of all, I can’t say my name.\n",
+      "⚠️ Erro ao traduzir segmento 2: 'words'\n",
+      "✅ Segmento 3: 嗯 -> Um\n",
+      "⚠️ Erro ao traduzir segmento 3: 'words'\n",
+      "✅ Segmento 4: 朱茵 -> Zhu Yin\n",
+      "⚠️ Erro ao traduzir segmento 4: 'words'\n",
+      "✅ Segmento 5: 焦恩俊 -> Jiao Enjun\n",
+      "⚠️ Erro ao traduzir segmento 5: 'words'\n",
+      "✅ Segmento 6: 周星驰 -> Stephen Chow\n",
+      "⚠️ Erro ao traduzir segmento 6: 'words'\n",
+      "✅ Segmento 7: 金映娟 -> Jin Yingjuan\n",
+      "⚠️ Erro ao traduzir segmento 7: 'words'\n",
+      "✅ Segmento 8: 张怡宁 -> Zhang Yining\n",
+      "⚠️ Erro ao traduzir segmento 8: 'words'\n",
+      "✅ Segmento 9: 七十 -> seventy\n",
+      "⚠️ Erro ao traduzir segmento 9: 'words'\n",
+      "✅ Segmento 10: 啊 -> ah\n",
+      "⚠️ Erro ao traduzir segmento 10: 'words'\n",
+      "✅ Segmento 11: 六七六四六三 -> six seven six four six three\n",
+      "⚠️ Erro ao traduzir segmento 11: 'words'\n",
+      "✅ Segmento 12: 朱茵 -> Zhu Yin\n",
+      "⚠️ Erro ao traduzir segmento 12: 'words'\n",
+      "✅ Segmento 13: 焦恩俊 -> Jiao Enjun\n",
+      "⚠️ Erro ao traduzir segmento 13: 'words'\n",
+      "✅ Segmento 14: 金映娟 -> Jin Yingjuan\n",
+      "⚠️ Erro ao traduzir segmento 14: 'words'\n",
+      "✅ Segmento 15: 周星驰 -> Stephen Chow\n",
+      "⚠️ Erro ao traduzir segmento 15: 'words'\n",
+      "✅ Segmento 16: 张怡宁 -> Zhang Yining\n",
+      "⚠️ Erro ao traduzir segmento 16: 'words'\n",
+      "✅ Segmento 17: 好 -> good\n",
+      "⚠️ Erro ao traduzir segmento 17: 'words'\n",
+      "✅ Segmento 18: 我们下一个计算 -> Our next calculation\n",
+      "⚠️ Erro ao traduzir segmento 18: 'words'\n",
+      "✅ Segmento 19: 接下来是个句子 -> Next is a sentence\n",
+      "⚠️ Erro ao traduzir segmento 19: 'words'\n",
+      "✅ Segmento 20: 嗯 -> Um\n",
+      "⚠️ Erro ao traduzir segmento 20: 'words'\n",
+      "✅ Segmento 21: 朱茵教周星驰跳舞 -> Zhu Yin teaches Stephen Chow how to dance\n",
+      "⚠️ Erro ao traduzir segmento 21: 'words'\n",
+      "✅ Segmento 22: 八十二 -> eighty-two\n",
+      "⚠️ Erro ao traduzir segmento 22: 'words'\n",
+      "✅ Segmento 23: 呃 -> Well\n",
+      "⚠️ Erro ao traduzir segmento 23: 'words'\n",
+      "✅ Segmento 24: 七十九 -> seventy-nine\n",
+      "⚠️ Erro ao traduzir segmento 24: 'words'\n",
+      "✅ Segmento 25: 七十六 -> seventy six\n",
+      "⚠️ Erro ao traduzir segmento 25: 'words'\n",
+      "✅ Segmento 26: 再然后七十三 -> Then seventy-three\n",
+      "⚠️ Erro ao traduzir segmento 26: 'words'\n",
+      "✅ Segmento 27: 朱茵教周星驰跳舞 -> Zhu Yin teaches Stephen Chow how to dance\n",
+      "⚠️ Erro ao traduzir segmento 27: 'words'\n",
+      "✅ Segmento 28: 好的 -> OK\n",
+      "⚠️ Erro ao traduzir segmento 28: 'words'\n",
+      "✅ Segmento 29: 接下来金映娟告诉焦恩俊了一个可怕的秘密 -> Next, Jin Yingjuan told Jiao Enjun a terrible secret\n",
+      "⚠️ Erro ao traduzir segmento 29: 'words'\n",
+      "✅ Segmento 30: 八十二 -> eighty-two\n",
+      "⚠️ Erro ao traduzir segmento 30: 'words'\n",
+      "✅ Segmento 31: 嗯 -> Um\n",
+      "⚠️ Erro ao traduzir segmento 31: 'words'\n",
+      "✅ Segmento 32: 七九七六七三 -> seven nine seven six seven three\n",
+      "⚠️ Erro ao traduzir segmento 32: 'words'\n",
+      "✅ Segmento 33: 金映娟告诉了焦恩俊一个可怕的秘密 -> Jin Yingjuan told Jiao Enjun a terrible secret\n",
+      "⚠️ Erro ao traduzir segmento 33: 'words'\n",
+      "✅ Segmento 34: 好 -> good\n",
+      "⚠️ Erro ao traduzir segmento 34: 'words'\n",
+      "✅ Segmento 35: 继续 -> continue\n",
+      "⚠️ Erro ao traduzir segmento 35: 'words'\n",
+      "✅ Segmento 36: 张怡宁给朱茵泡茶 -> Zhang Yining makes tea for Zhu Yin\n",
+      "⚠️ Erro ao traduzir segmento 36: 'words'\n",
+      "✅ Segmento 37: 二十四 -> twenty-four\n",
+      "⚠️ Erro ao traduzir segmento 37: 'words'\n",
+      "✅ Segmento 38: 呃 -> Well\n",
+      "⚠️ Erro ao traduzir segmento 38: 'words'\n",
+      "✅ Segmento 39: 二一十八 -> Two hundred and eighty\n",
+      "⚠️ Erro ao traduzir segmento 39: 'words'\n",
+      "✅ Segmento 40: 十五 -> fifteen\n",
+      "⚠️ Erro ao traduzir segmento 40: 'words'\n",
+      "✅ Segmento 41: 张怡宁给朱茵泡茶 -> Zhang Yining makes tea for Zhu Yin\n",
+      "⚠️ Erro ao traduzir segmento 41: 'words'\n",
+      "✅ Segmento 42: 周星驰邀请金映娟一起去听演唱会 -> Stephen Chow invited Jin Yingjuan to attend the concert together\n",
+      "⚠️ Erro ao traduzir segmento 42: 'words'\n",
+      "✅ Segmento 43: 五十九 -> fifty-nine\n",
+      "⚠️ Erro ao traduzir segmento 43: 'words'\n",
+      "✅ Segmento 44: 呃 -> Well\n",
+      "⚠️ Erro ao traduzir segmento 44: 'words'\n",
+      "✅ Segmento 45: 五十六 -> fifty six\n",
+      "⚠️ Erro ao traduzir segmento 45: 'words'\n",
+      "✅ Segmento 46: 五十三 -> fifty-three\n",
+      "⚠️ Erro ao traduzir segmento 46: 'words'\n",
+      "✅ Segmento 47: 五十 -> Fifty\n",
+      "⚠️ Erro ao traduzir segmento 47: 'words'\n",
+      "✅ Segmento 48: 周星驰邀请金映娟一起去听演唱会 -> Stephen Chow invited Jin Yingjuan to attend the concert together\n",
+      "⚠️ Erro ao traduzir segmento 48: 'words'\n",
+      "✅ Segmento 49: 焦恩俊把张怡宁从午睡中叫醒 -> Jiao Enjun woke up Zhang Yining from her nap\n",
+      "⚠️ Erro ao traduzir segmento 49: 'words'\n",
+      "✅ Segmento 50: 四十一 -> Forty-one\n",
+      "⚠️ Erro ao traduzir segmento 50: 'words'\n",
+      "✅ Segmento 51: 呃 -> Well\n",
+      "⚠️ Erro ao traduzir segmento 51: 'words'\n",
+      "✅ Segmento 52: 三十八 -> thirty-eight\n",
+      "⚠️ Erro ao traduzir segmento 52: 'words'\n",
+      "✅ Segmento 53: 三十五 -> Thirty-five\n",
+      "⚠️ Erro ao traduzir segmento 53: 'words'\n",
+      "✅ Segmento 54: 三十三 -> Thirty-three\n",
+      "⚠️ Erro ao traduzir segmento 54: 'words'\n",
+      "✅ Segmento 55: 焦恩俊把张怡宁从午睡中叫醒 -> Jiao Enjun woke up Zhang Yining from her nap\n",
+      "⚠️ Erro ao traduzir segmento 55: 'words'\n",
+      "✅ Segmento 56: 好 -> good\n",
+      "⚠️ Erro ao traduzir segmento 56: 'words'\n",
+      "✅ Segmento 57: 接下来回答我一个问题哦 -> Next, answer me a question\n",
+      "⚠️ Erro ao traduzir segmento 57: 'words'\n",
+      "✅ Segmento 58: 谁告诉焦恩俊了一个可怕的秘密 -> Who told Jiao Enjun a terrible secret?\n",
+      "⚠️ Erro ao traduzir segmento 58: 'words'\n",
+      "✅ Segmento 59: 谁告诉过焦恩俊一个可怕的秘密 -> Who told Jiao Enjun a terrible secret?\n",
+      "⚠️ Erro ao traduzir segmento 59: 'words'\n",
+      "✅ Segmento 60: 对 -> right\n",
+      "⚠️ Erro ao traduzir segmento 60: 'words'\n",
+      "✅ Segmento 61: 刚刚重复的话里面 -> In what I just repeated\n",
+      "⚠️ Erro ao traduzir segmento 61: 'words'\n",
+      "✅ Segmento 62: 嗯 -> Um\n",
+      "⚠️ Erro ao traduzir segmento 62: 'words'\n",
+      "✅ Segmento 63: 这个我想想 -> Let me think about this\n",
+      "⚠️ Erro ao traduzir segmento 63: 'words'\n",
+      "✅ Segmento 64: 哦 -> oh\n",
+      "⚠️ Erro ao traduzir segmento 64: 'words'\n",
+      "✅ Segmento 65: 金映娟 -> Jin Yingjuan\n",
+      "⚠️ Erro ao traduzir segmento 65: 'words'\n",
+      "✅ Segmento 66: 应该是 -> should be\n",
+      "⚠️ Erro ao traduzir segmento 66: 'words'\n",
+      "✅ Segmento 67: 对的 -> Yes\n",
+      "⚠️ Erro ao traduzir segmento 67: 'words'\n",
+      "✅ Segmento 68: 好 -> good\n",
+      "⚠️ Erro ao traduzir segmento 68: 'words'\n",
+      "✅ Segmento 69: 好 -> good\n",
+      "⚠️ Erro ao traduzir segmento 69: 'words'\n",
+      "✅ Segmento 70: 这个做得很好 -> This one is well done\n",
+      "⚠️ Erro ao traduzir segmento 70: 'words'\n",
+      "✅ Segmento 71: 好 -> good\n",
+      "⚠️ Erro ao traduzir segmento 71: 'words'\n",
+      "✅ Segmento 72: 我们接下来下一个 -> Let's go next\n",
+      "⚠️ Erro ao traduzir segmento 72: 'words'\n",
+      "✅ Segmento 73: 先是名字 -> First the name\n",
+      "⚠️ Erro ao traduzir segmento 73: 'words'\n",
+      "✅ Segmento 74: 嗯 -> Um\n",
+      "⚠️ Erro ao traduzir segmento 74: 'words'\n",
+      "✅ Segmento 75: 周星驰 -> Stephen Chow\n",
+      "⚠️ Erro ao traduzir segmento 75: 'words'\n",
+      "✅ Segmento 76: 金映娟 -> Jin Yingjuan\n",
+      "⚠️ Erro ao traduzir segmento 76: 'words'\n",
+      "✅ Segmento 77: 张怡宁 -> Zhang Yining\n",
+      "⚠️ Erro ao traduzir segmento 77: 'words'\n",
+      "✅ Segmento 78: 焦恩俊 -> Jiao Enjun\n",
+      "⚠️ Erro ao traduzir segmento 78: 'words'\n",
+      "✅ Segmento 79: 朱茵 -> Zhu Yin\n",
+      "⚠️ Erro ao traduzir segmento 79: 'words'\n",
+      "✅ Segmento 80: 七十二 -> seventy-two\n",
+      "⚠️ Erro ao traduzir segmento 80: 'words'\n",
+      "✅ Segmento 81: 呃 -> Well\n",
+      "⚠️ Erro ao traduzir segmento 81: 'words'\n",
+      "✅ Segmento 82: 六十九 -> sixty-nine\n",
+      "⚠️ Erro ao traduzir segmento 82: 'words'\n",
+      "✅ Segmento 83: 六十六 -> sixty six\n",
+      "⚠️ Erro ao traduzir segmento 83: 'words'\n",
+      "✅ Segmento 84: 再然后六十三 -> Then sixty-three\n",
+      "⚠️ Erro ao traduzir segmento 84: 'words'\n",
+      "✅ Segmento 85: 周星驰 -> Stephen Chow\n",
+      "⚠️ Erro ao traduzir segmento 85: 'words'\n",
+      "✅ Segmento 86: 金映娟 -> Jin Yingjuan\n",
+      "⚠️ Erro ao traduzir segmento 86: 'words'\n",
+      "✅ Segmento 87: 然后 -> Then\n",
+      "⚠️ Erro ao traduzir segmento 87: 'words'\n",
+      "✅ Segmento 88: 呃 -> Well\n",
+      "⚠️ Erro ao traduzir segmento 88: 'words'\n",
+      "✅ Segmento 89: 再后焦恩俊 -> Later Jiao Enjun\n",
+      "⚠️ Erro ao traduzir segmento 89: 'words'\n",
+      "✅ Segmento 90: 呃 -> Well\n",
+      "⚠️ Erro ao traduzir segmento 90: 'words'\n",
+      "✅ Segmento 91: 呃 -> Well\n",
+      "⚠️ Erro ao traduzir segmento 91: 'words'\n",
+      "✅ Segmento 92: 朱茵 -> Zhu Yin\n",
+      "⚠️ Erro ao traduzir segmento 92: 'words'\n",
+      "✅ Segmento 93: 再后张怡宁 -> Then Zhang Yining\n",
+      "⚠️ Erro ao traduzir segmento 93: 'words'\n",
+      "✅ Segmento 94: 好 -> good\n",
+      "⚠️ Erro ao traduzir segmento 94: 'words'\n",
+      "✅ Segmento 95: 接下来是句子啊 -> Next is the sentence\n",
+      "⚠️ Erro ao traduzir segmento 95: 'words'\n",
+      "✅ Segmento 96: 嗯 -> Um\n",
+      "⚠️ Erro ao traduzir segmento 96: 'words'\n",
+      "✅ Segmento 97: 朱茵请焦恩俊吃晚饭 -> Zhu Yin invites Jiao Enjun to dinner\n",
+      "⚠️ Erro ao traduzir segmento 97: 'words'\n",
+      "✅ Segmento 98: 九十六 -> ninety six\n",
+      "⚠️ Erro ao traduzir segmento 98: 'words'\n",
+      "✅ Segmento 99: 啊 -> ah\n",
+      "⚠️ Erro ao traduzir segmento 99: 'words'\n",
+      "✅ Segmento 100: 九十三 -> ninety-three\n",
+      "⚠️ Erro ao traduzir segmento 100: 'words'\n",
       "\n",
       "✅ Tradução de teste concluída. Arquivo salvo em:\n",
-      "C:\\Users\\ingri\\Documents\\IMIM\\experiments\\RJH006_subj_obj\\transcription_test_english.json\n"
+      "C:\\Users\\ingri\\Documents\\IMIM\\experiments\\RJH006_subj_obj\\teste\\transcription_test_english.json\n"
      ]
     }
    ],
@@ -32,8 +222,8 @@
     "from deep_translator import GoogleTranslator\n",
     "\n",
     "# Caminhos\n",
-    "input_path = r\"C:\\Users\\ingri\\Documents\\IMIM\\experiments\\RJH006_subj_obj\\RJH006_subj_obj_transcription.json\"\n",
-    "output_path = r\"C:\\Users\\ingri\\Documents\\IMIM\\experiments\\RJH006_subj_obj\\transcription_test_english.json\"\n",
+    "input_path = r\"C:\\Users\\ingri\\Documents\\IMIM\\experiments\\RJH006_subj_obj\\teste\\RJH006_subj_obj_transcription_words.json\"\n",
+    "output_path = r\"C:\\Users\\ingri\\Documents\\IMIM\\experiments\\RJH006_subj_obj\\teste\\transcription_test_english.json\"\n",
     "\n",
     "# Tradutor: de chinês para inglês\n",
     "translator = GoogleTranslator(source='zh-TW', target='en')\n",
@@ -43,7 +233,7 @@
     "    data = json.load(f)\n",
     "\n",
     "# Traduz apenas os primeiros 2 segmentos (ajuste aqui se quiser)\n",
-    "subset = data[\"segments\"][:10]\n",
+    "subset = data[\"sentences\"][:100]\n",
     "\n",
     "for i, segment in enumerate(subset):\n",
     "    try:\n",
