--- a/analysis/translating.ipynb
+++ b/analysis/translating.ipynb
@@ -22,46 +22,38 @@
     "import json\n",
     "from deep_translator import GoogleTranslator\n",
     "\n",
-    "input_path = r\"C:\\Users\\ingri\\Documents\\IMIM\\experiments\\RJH006_subj_obj\\RJH006_subj_obj_transcription.json\"\n",
-    "output_path = r\"C:\\Users\\ingri\\Documents\\IMIM\\experiments\\RJH006_subj_obj\\transcription_english.json\"\n",
+    "#input_path = r\"C:\\Users\\ingri\\Documents\\IMIM\\experiments\\RJH006_subj_obj\\RJH006_subj_obj_transcription.json\"\n",
+    "#output_path = r\"C:\\Users\\ingri\\Documents\\IMIM\\experiments\\RJH006_subj_obj\\transcription_english.json\"\n",
+    "\n",
+    "input_path = r\"\"\n",
+    "output_path = r\"\"\n",
     "\n",
     "translator = GoogleTranslator(source='zh-TW', target='en')\n",
     "\n",
     "with open(input_path, \"r\", encoding=\"utf-8\") as f:\n",
     "    data = json.load(f)\n",
     "\n",
-    "def safe_translate(text, retries=5):\n",
-    "    \"\"\"Traduz com tentativas e pausas em caso de falha.\"\"\"\n",
-    "    for attempt in range(retries):\n",
-    "        try:\n",
-    "            return translator.translate(text)\n",
-    "        except Exception as e:\n",
-    "            print(f\"⚠️ Erro na tradução ({e}). Tentando novamente ({attempt+1}/{retries})...\")\n",
-    "            time.sleep(5 * (attempt + 1))  # espera cada vez mais tempo\n",
-    "    print(\"❌ Falhou após várias tentativas.\")\n",
-    "    return text  # retorna o texto original para não perder dados\n",
-    "\n",
     "for i, segment in enumerate(data[\"segments\"]):\n",
-    "    segment[\"text_eng\"] = safe_translate(segment[\"text\"])\n",
+    "    segment[\"text_eng\"] = translator.translate(segment[\"text\"])\n",
     "    time.sleep(0.5)\n",
     "\n",
     "    for word in segment[\"words\"]:\n",
-    "        word[\"text_eng\"] = safe_translate(word[\"text\"])\n",
+    "        word[\"text_eng\"] = translator.translate(word[\"text\"])\n",
     "        time.sleep(0.2)\n",
     "\n",
     "    print(f\"✅ Segmento {i+1}/{len(data['segments'])} traduzido.\")\n",
     "\n",
-    "    # 💾 salva progresso parcial a cada 10 segmentos\n",
+    "    # 💾 saves partial progress (10 segments)\n",
     "    if (i + 1) % 10 == 0:\n",
     "        with open(output_path, \"w\", encoding=\"utf-8\") as f:\n",
     "            json.dump(data, f, ensure_ascii=False, indent=2)\n",
-    "        print(f\"💾 Progresso salvo ({i+1} segmentos).\")\n",
+    "        print(f\"💾 Progress saved ({i+1} segments).\")\n",
     "\n",
-    "# salva tudo no final\n",
+    "# saves final data\n",
     "with open(output_path, \"w\", encoding=\"utf-8\") as f:\n",
     "    json.dump(data, f, ensure_ascii=False, indent=2)\n",
     "\n",
-    "print(f\"✅ Tradução concluída e salva em: {output_path}\")\n"
+    "print(f\"✅ Translation concluded and saved in: {output_path}\")\n"
    ]
   }
  ],
