adding speaker_id

--- a/analysis/find_names_in_transcription.ipynb
+++ b/analysis/find_names_in_transcription.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "e212d303",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Resultados salvos em: C:\\Users\\ingri\\Documents\\IMIM\\experiments\\RJH006_subj_obj/RJH006_subj_obj_names_timestampsNEW.json\n",
+      "✅ Resultados salvos em: C:\\Users\\ingri\\Documents\\IMIM\\experiments\\RJH006_subj_obj/RJH006_subj_obj_names_timestampsNEWNEW.json\n",
       "Encontrados 311 nomes.\n"
      ]
     }
@@ -66,6 +66,8 @@
     "                    sentence_start = words[0][\"start\"] \n",
     "                    sentence_end = words[-1][\"end\"]\n",
     "\n",
+    "                    speaker_id = words[0][\"speaker_id\"] \n",
+    "\n",
     "                    results.append({\n",
     "                        \"chin_name\": n,\n",
     "                        \"eng_name\": eng,\n",
@@ -74,12 +76,13 @@
     "                        \"chin_sentence\": full_text,\n",
     "                        \"eng_sentence\": eng_sentence,\n",
     "                        \"sentence_start\": sentence_start,\n",
-    "                        \"sentence_end\": sentence_end\n",
+    "                        \"sentence_end\": sentence_end,\n",
+    "                        \"speaker_id\" : speaker_id\n",
     "                        })\n",
     "                    break \n",
     "\n",
     "#Saving results\n",
-    "output_path = f\"{folder_base}/{experiment_name}_names_timestampsNEW.json\"\n",
+    "output_path = f\"{folder_base}/{experiment_name}_names_timestampsNEWNEW.json\"\n",
     "with open(output_path, 'w', encoding='utf-8') as f_out:\n",
     "    json.dump(results, f_out, ensure_ascii=False, indent=2)\n",
     "\n",
