--- a/analysis/criating_csv_from_json.ipynb
+++ b/analysis/criating_csv_from_json.ipynb
@@ -2,19 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "a33e6f4e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ".csv succesfully criated: C:\\Users\\ingri\\Documents\\IMIM\\experiments\\RJH006_subj_obj\\RJH006_subj_obj_names_timestamps_CSV_NEW.csv\n",
+      ".xlsx succesfully criated: C:\\Users\\ingri\\Documents\\IMIM\\experiments\\RJH006_subj_obj\\RJH006_subj_obj_names_timestamps_XLSX_NEW.xlsx\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ingri\\AppData\\Local\\Temp\\ipykernel_7900\\4214554119.py:40: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "  df = df.replace(\"speaker_1\", 1)\n"
+     ]
+    }
+   ],
    "source": [
     "import json\n",
     "import csv\n",
     "import pandas as pd\n",
     "\n",
     "#Paths\n",
-    "json_path = r\"C:\\Users\\ingri\\Documents\\IMIM\\experiments\\RJH006_subj_obj\\RJH006_subj_obj_names_timestampsNEW.json\"\n",
-    "csv_path = r\"C:\\Users\\ingri\\Documents\\IMIM\\experiments\\RJH006_subj_obj\\RJH006_subj_obj_names_timestamps_CSV.csv\"\n",
-    "excel_path = r\"C:\\Users\\ingri\\Documents\\IMIM\\experiments\\RJH006_subj_obj\\RJH006_subj_obj_names_timestamps_XLSX.xlsx\"\n",
+    "json_path = r\"C:\\Users\\ingri\\Documents\\IMIM\\experiments\\RJH006_subj_obj\\RJH006_subj_obj_names_timestampsNEWNEW.json\"\n",
+    "csv_path = r\"C:\\Users\\ingri\\Documents\\IMIM\\experiments\\RJH006_subj_obj\\RJH006_subj_obj_names_timestamps_CSV_NEW.csv\"\n",
+    "excel_path = r\"C:\\Users\\ingri\\Documents\\IMIM\\experiments\\RJH006_subj_obj\\RJH006_subj_obj_names_timestamps_XLSX_NEW.xlsx\"\n",
     "\n",
     "#Opening json\n",
     "with open(json_path, \"r\", encoding=\"utf-8\") as f:\n",
@@ -25,7 +42,7 @@
     "    writer = csv.writer(csvfile)\n",
     "\n",
     "    #headers\n",
-    "    writer.writerow([\"chinese_name\", \"english_name\", \"start_time\", \"end_time\", \"chinese_sentence\", \"english_sentence\", \"sentence_start\", \"sentence_end\"])\n",
+    "    writer.writerow([\"chinese_name\", \"english_name\", \"start_time\", \"end_time\", \"chinese_sentence\", \"english_sentence\", \"sentence_start\", \"sentence_end\", \"speaker_id\"])\n",
     "\n",
     "    #iterating\n",
     "    for item in data:\n",
@@ -37,13 +54,20 @@
     "        eng_sentence = item.get(\"eng_sentence\", \"\")\n",
     "        sentence_start = item.get(\"sentence_start\", \"\")\n",
     "        sentence_end = item.get(\"sentence_end\", \"\")\n",
+    "        speaker_id = item.get(\"speaker_id\")\n",
     "\n",
-    "        writer.writerow([chinese, english, start, end, chin_sentence, eng_sentence, sentence_start, sentence_end])\n",
+    "        writer.writerow([chinese, english, start, end, chin_sentence, eng_sentence, sentence_start, sentence_end, speaker_id])\n",
     "\n",
     "print(f'.csv succesfully criated: {csv_path}') \n",
     "\n",
-    "# Salva como Excel (.xlsx)\n",
     "df = pd.read_csv(csv_path)\n",
+    "\n",
+    "df = df.replace(\"speaker_0\", 0)\n",
+    "df = df.replace(\"speaker_1\", 1)\n",
+    "\n",
+    "df.to_csv(csv_path)\n",
+    "\n",
+    "# Salva como Excel (.xlsx)\n",
     "df.to_excel(excel_path, index=False)\n",
     "\n",
     "print(f'.xlsx succesfully criated: {excel_path}')\n"
@@ -51,8 +75,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "daily",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
