update test - classification

--- a/analysis/find_names_in_transcription.ipynb
+++ b/analysis/find_names_in_transcription.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "e212d303",
    "metadata": {},
    "outputs": [
@@ -86,8 +86,8 @@
     "with open(output_path, 'w', encoding='utf-8') as f_out:\n",
     "    json.dump(results, f_out, ensure_ascii=False, indent=2)\n",
     "\n",
-    "print(f\"✅ Resultados salvos em: {output_path}\")\n",
-    "print(f\"Encontrados {len(results)} nomes.\")\n"
+    "print(f\"✅ Results saved in: {output_path}\")\n",
+    "print(f\"{len(results)} names found.\")\n"
    ]
   }
  ],
